--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,14 +3,16 @@
   margin: 0 auto;
   text-align: center;
   display: grid;
+  width: 100vw;
+  height: 100vh;
   grid-template-columns: 2fr 1fr;
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
-.gallery .reset {
+.gallery .card {
   margin: 0;
 }
