--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,9 +9,8 @@
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+
+  background-color: red;
 }
 .gallery .card {
   margin: 0;
