--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -14,7 +14,7 @@
 }
 .Page-title {
   width: 420px;
-  height: 360px;
+  height: 325px;
 }
 .main {
 }
@@ -24,6 +24,7 @@
   font-size: 5.5rem;
   line-height: 1.1em;
   padding: 5px 10px 0px;
+  margin-bottom: 5px;
 }
 .prgrp-font {
   font-family: futura;
@@ -32,7 +33,7 @@
   padding-right: 25px;
   padding-left: 10px;
   padding-bottom: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   line-height: 1.42em;
 }
 .buttons {
@@ -40,10 +41,9 @@
   display: flex;
   flex-direction: row;
   gap: 0px 22px;
-  margin-top: 30px;
+  margin-top: 10px;
   grid-column-start: 1;
   grid-column-end: 3;
-  width: 320px;
 }
 .button-size {
   width: 120px;
@@ -52,10 +52,10 @@
   width: 320px;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  flex-direction: row;
-  height: 360px;
+  flex-direction: column;
+  height: 325px;
   align-items: start;
-  display: grid;
+  display: flex;
   grid-template-rows: 1fr 1fr 1fr;
   grid-auto-flow: column;
 }
@@ -68,11 +68,14 @@
   width: auto;
 }
 .Two-Columns {
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr 1fr;
   grid-column-start: 1;
   grid-column-end: 3;
   gap: 0px;
-  width: 320px;
   grid-template-rows: 1fr;
+  flex-direction: row;
+}
+.Three-columns {
+  column-gap: 5px;
 }
