--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -42,36 +42,36 @@
   margin-top: 10px;
 }
 .buttons {
-  padding: 0px 0px 0px 10px;
+  padding: 0px;
   display: flex;
   flex-direction: row;
-  gap: 0px 17px;
+  gap: 0px 10px;
   margin-top: 0px;
-  grid-column-start: 1;
-  grid-column-end: 3;
+  width: 100%;
+  justify-content: space-between;
 }
 .button-size {
-  width: 120px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 .Main {
   width: 320px;
-  grid-template-columns: 1fr 1fr;
   gap: 20px;
   flex-direction: column;
   height: 325px;
   align-items: start;
   display: flex;
-  grid-template-rows: 1fr 1fr 1fr;
   grid-auto-flow: column;
   padding-top: 20px;
 }
 .Img-size {
-  display: flex;
-  flex-direction: row;
   gap: 0px;
-  height: 100px;
+  height: auto;
   max-width: none;
-  width: auto;
+  width: 100%;
+  margin-left: 0em;
 }
 .Two-Columns {
   display: flex;
@@ -79,7 +79,8 @@
   grid-column-end: 3;
   gap: 0px;
   flex-direction: row;
-  height: auto;
+  width: 100%;
+  justify-content: space-between;
 }
 .Three-columns {
   padding-left: 10px;
