--- a/src/components/layout-indicator/layout-indicator.module.scss
+++ b/src/components/layout-indicator/layout-indicator.module.scss
@@ -6,11 +6,10 @@
   height: 1000px;
 }
 .indicator {
-  background-color: #bcb4b4;
+  background-color: #c06cb1;
   /* height: 400px; */
-  grid-template-columns: 1fr 1fr;
   gap: 20px;
-  display: flex;
+  display: grid;
   flex-direction: column;
 }
 
@@ -30,7 +29,7 @@
   margin: 10px;
 }
 .two-column-layout {
-  display: flex;
+  display: grid;
   flex-direction: row;
   gap: 0px 18px;
   margin: 0px;
@@ -38,4 +37,8 @@
 }
 .btn-size {
   width: 120px;
+}
+.bg-color {
+  display: grid;
+  grid-auto-flow: column;
 }
