--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -3,8 +3,8 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 20px;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 25px;
   width: 1000px;
   height: 640px;
 }
@@ -14,6 +14,7 @@
   flex-direction: column;
   gap: 20px;
   background-color: rgba(232, 240, 255, 1);
+  height: 287px;
 }
 .Page-title {
   width: 420px;
@@ -79,8 +80,6 @@
 }
 .Two-Columns {
   display: flex;
-  grid-column-start: 1;
-  grid-column-end: 3;
   gap: 0px;
   flex-direction: row;
   justify-content: space-between;
@@ -91,4 +90,22 @@
   margin: 0px;
   gap: 5px;
   display: flex;
+}
+.right {
+  display: flex;
+  justify-content: end;
+  height: 332px;
+}
+.one-line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+.input {
+  height: 38px;
+  flex-grow: 1;
+}
+.label {
+  flex-grow: 1;
 }
