--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: rgba(232, 240, 255, 1);
+  // background-color: rgba(232, 240, 255, 1);
   height: 287px;
 }
 .Page-title {
@@ -53,6 +53,7 @@
   margin-top: 0px;
   width: 100%;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 .button-size {
   width: auto;
@@ -60,6 +61,9 @@
   flex-direction: row;
   gap: 10px;
   padding: 0px 0px 0px 10px;
+  grid-auto-flow: row;
+  margin-bottom: 0px;
+  justify-content: start;
 }
 .Main {
   width: 320px;
@@ -84,6 +88,8 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 0px;
+  margin-top: 1px;
 }
 .Three-columns {
   padding-left: 10px;
@@ -101,6 +107,9 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 0px;
 }
 .input {
   height: 38px;
@@ -108,4 +117,47 @@
 }
 .label {
   flex-grow: 1;
+  height: 28px;
+}
+.icons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 6px;
+  width: 100%;
+  flex-direction: row;
+  gap: 0px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.menu {
+  display: flex;
+  width: 100%;
+  margin-top: 0px;
+}
+.menu-item {
+  flex-grow: 1;
+  padding: 0em;
+}
+.grid-rb {
+  gap: 0px;
+}
+.top-margin {
+  margin-top: 16px;
+}
+.div-img-size {
+  width: 120px;
+  height: 120px;
+}
+.grid-mb {
+}
+.prog-size {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.another-gap {
+  margin-right: 0px;
+  margin-left: 23px;
+}
+.top-margin {
+  margin-top: 20px;
 }
