--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -157,7 +157,9 @@
 .another-gap {
   margin-right: 0px;
   margin-left: 23px;
+  padding-top: 7px;
 }
 .top-margin {
   margin-top: 14px;
+  padding-top: 4px;
 }
