--- a/src/components/online-playground/online-playground.module.scss
+++ b/src/components/online-playground/online-playground.module.scss
@@ -1,5 +1,3 @@
-.root {
-}
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -13,16 +11,13 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  // background-color: rgba(232, 240, 255, 1);
   height: 287px;
 }
-.Page-title {
+.page-title {
   width: 420px;
   height: 333px;
   row-gap: 0px;
   padding: 2px 0px 20px;
-}
-.main {
 }
 .title-font {
   font-family: FUTURA;
@@ -65,7 +60,7 @@
   margin-bottom: 0px;
   justify-content: start;
 }
-.Main {
+.main {
   width: 320px;
   gap: 20px;
   flex-direction: column;
@@ -75,7 +70,7 @@
   grid-auto-flow: column;
   padding-top: 30px;
 }
-.Img-size {
+.img-size {
   gap: 0px;
   height: auto;
   max-width: none;
@@ -83,7 +78,7 @@
   margin-left: 0em;
   margin-top: 7px;
 }
-.Two-Columns {
+.two-columns {
   display: flex;
   gap: 0px;
   flex-direction: row;
@@ -92,7 +87,7 @@
   margin-bottom: 0px;
   margin-top: 5px;
 }
-.Three-columns {
+.three-columns {
   padding-left: 10px;
   margin: 0px;
   gap: 5px;
