--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,51 +1,160 @@
-.App {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 25px;
+  width: 1000px;
+  height: 640px;
 }
-
-.logo {
-  padding: 1.25em;
-  will-change: filter;
-  transition: filter 300ms;
+.grid-element {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 287px;
 }
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.page-title {
+  width: 420px;
+  height: 333px;
+  row-gap: 0px;
+  padding: 2px 0px 20px;
 }
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.title-font {
+  font-family: FUTURA;
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 1.1em;
+  padding: 5px 10px 0px;
+  margin-bottom: 10px;
+  min-height: auto;
 }
-
-.logo.ts:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+.prgrp-font {
+  font-family: futura;
+  font-weight: 300;
+  font-size: 16px;
+  padding-right: 25px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  line-height: 1.42em;
+  margin-top: 0px;
+  padding-top: 0px;
 }
-
-.logo.scss:hover {
-  filter: drop-shadow(0 0 2em #cc6698aa);
+.buttons {
+  padding: 0px 0px 0px 2px;
+  display: flex;
+  flex-direction: row;
+  gap: 0px 10px;
+  margin-top: 0px;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-size {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 0px 0px 0px 10px;
+  grid-auto-flow: row;
+  margin-bottom: 0px;
+  justify-content: start;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main {
+  width: 320px;
+  gap: 20px;
+  flex-direction: column;
+  height: 325px;
+  align-items: start;
+  display: flex;
+  grid-auto-flow: column;
+  padding-top: 30px;
 }
-
-.card {
-  padding: 2em;
+.img-size {
+  gap: 0px;
+  height: auto;
+  max-width: none;
+  width: 100%;
+  margin-left: 0em;
+  margin-top: 7px;
 }
-
-.read-the-docs {
-  color: #888;
+.two-columns {
+  display: flex;
+  gap: 0px;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 0px;
+  margin-top: 5px;
+}
+.three-columns {
+  padding-left: 10px;
+  margin: 0px;
+  gap: 5px;
+  display: flex;
+}
+.right {
+  display: flex;
+  justify-content: end;
+  height: 332px;
+}
+.one-line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.input {
+  height: 38px;
+  flex-grow: 1;
+}
+.label {
+  flex-grow: 1;
+  height: 28px;
+}
+.icons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 6px;
+  width: 100%;
+  flex-direction: row;
+  gap: 0px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.menu {
+  display: flex;
+  width: 100%;
+  margin-top: 0px;
+}
+.menu-item {
+  flex-grow: 1;
+  padding: 0em;
+}
+.grid-rb {
+  gap: 0px;
+}
+.div-img-size {
+  width: 120px;
+  height: 120px;
+  margin-top: 2px;
+}
+.grid-mb {
+  padding-top: 25px;
+}
+.prog-size {
+  margin-top: 24px;
+  margin-bottom: 0px;
+}
+.another-gap {
+  margin-right: 0px;
+  margin-left: 23px;
+  padding-top: 7px;
+}
+.top-margin {
+  margin-top: 14px;
+  padding-top: 4px;
 }
