--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,10 @@
   gap: 20px 25px;
   width: 1000px;
   height: 640px;
+  background: #d2c9ed;
+  margin: auto;
 }
+
 .grid-element {
   width: auto;
   display: flex;
@@ -13,12 +16,14 @@
   gap: 20px;
   height: 287px;
 }
+
 .page-title {
   width: 420px;
   height: 333px;
   row-gap: 0px;
   padding: 2px 0px 20px;
 }
+
 .title-font {
   font-family: FUTURA;
   font-weight: 400;
@@ -28,6 +33,7 @@
   margin-bottom: 10px;
   min-height: auto;
 }
+
 .prgrp-font {
   font-family: futura;
   font-weight: 300;
@@ -40,6 +46,7 @@
   margin-top: 0px;
   padding-top: 0px;
 }
+
 .buttons {
   padding: 0px 0px 0px 2px;
   display: flex;
@@ -50,6 +57,7 @@
   justify-content: space-between;
   margin-bottom: 10px;
 }
+
 .button-size {
   width: auto;
   display: flex;
@@ -60,6 +68,7 @@
   margin-bottom: 0px;
   justify-content: start;
 }
+
 .main {
   width: 320px;
   gap: 20px;
@@ -70,6 +79,7 @@
   grid-auto-flow: column;
   padding-top: 30px;
 }
+
 .img-size {
   gap: 0px;
   height: auto;
@@ -78,6 +88,7 @@
   margin-left: 0em;
   margin-top: 7px;
 }
+
 .two-columns {
   display: flex;
   gap: 0px;
@@ -87,17 +98,20 @@
   margin-bottom: 0px;
   margin-top: 5px;
 }
+
 .three-columns {
   padding-left: 10px;
   margin: 0px;
   gap: 5px;
   display: flex;
 }
+
 .right {
   display: flex;
   justify-content: end;
   height: 332px;
 }
+
 .one-line {
   display: flex;
   justify-content: space-between;
@@ -107,14 +121,17 @@
   margin-top: 20px;
   margin-bottom: 0px;
 }
+
 .input {
   height: 38px;
   flex-grow: 1;
 }
+
 .label {
   flex-grow: 1;
   height: 28px;
 }
+
 .icons {
   display: flex;
   justify-content: space-between;
@@ -125,35 +142,43 @@
   padding-left: 10px;
   margin-bottom: 20px;
 }
+
 .menu {
   display: flex;
   width: 100%;
   margin-top: 0px;
 }
+
 .menu-item {
   flex-grow: 1;
   padding: 0em;
 }
+
 .grid-rb {
   gap: 0px;
 }
+
 .div-img-size {
   width: 120px;
   height: 120px;
   margin-top: 2px;
 }
+
 .grid-mb {
   padding-top: 25px;
 }
+
 .prog-size {
   margin-top: 24px;
   margin-bottom: 0px;
 }
+
 .another-gap {
   margin-right: 0px;
   margin-left: 23px;
   padding-top: 7px;
 }
+
 .top-margin {
   margin-top: 14px;
   padding-top: 4px;
