--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,23 +3,22 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 20px 25px;
-  width: 1000px;
-  height: 640px;
+  max-width: 1200px;
+  height: 100vh;
   background: #d2c9ed;
   margin: auto;
+  padding: 0 20px;
 }
-
 .grid-element {
   width: auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 287px;
 }
 
 .page-title {
   width: 420px;
-  height: 333px;
+  // height: 333px;
   row-gap: 0px;
   padding: 2px 0px 20px;
 }
@@ -107,9 +106,7 @@
 }
 
 .right {
-  display: flex;
-  justify-content: end;
-  height: 332px;
+  padding-top: 25px;
 }
 
 .one-line {
