--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,182 +1,128 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 20px 25px;
-  max-width: 1200px;
-  height: 100vh;
+.page {
   background: #d2c9ed;
-  margin: auto;
-  padding: 0 20px;
 }
-.grid-element {
-  width: auto;
+
+.container {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 1200px;
+  height: 100vh;
+  margin: auto;
 }
 
-.page-title {
-  width: 420px;
-  // height: 333px;
-  row-gap: 0px;
-  padding: 2px 0px 20px;
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+  padding: 0 20px;
 }
 
-.title-font {
+.title {
   font-family: FUTURA;
   font-weight: 400;
   font-size: 80px;
+  min-width: 400px;
+  letter-spacing: -3px;
   line-height: 1.1em;
-  padding: 5px 10px 0px;
-  margin-bottom: 10px;
-  min-height: auto;
 }
 
-.prgrp-font {
-  font-family: futura;
+.description {
+  font-family: FUTURA;
   font-weight: 300;
   font-size: 16px;
-  padding-right: 25px;
-  padding-left: 10px;
-  padding-bottom: 5px;
-  margin-bottom: 20px;
-  line-height: 1.42em;
-  margin-top: 0px;
-  padding-top: 0px;
 }
 
-.buttons {
-  padding: 0px 0px 0px 2px;
+.buttons-gap {
   display: flex;
-  flex-direction: row;
-  gap: 0px 10px;
-  margin-top: 0px;
-  width: 100%;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.button-size {
-  width: auto;
-  display: flex;
-  flex-direction: row;
   gap: 10px;
-  padding: 0px 0px 0px 10px;
-  grid-auto-flow: row;
-  margin-bottom: 0px;
-  justify-content: start;
+  padding-top: 5px;
 }
 
-.main {
-  width: 320px;
-  gap: 20px;
-  flex-direction: column;
-  height: 325px;
-  align-items: start;
+.labels {
   display: flex;
-  grid-auto-flow: column;
-  padding-top: 30px;
-}
-
-.img-size {
-  gap: 0px;
-  height: auto;
-  max-width: none;
-  width: 100%;
-  margin-left: 0em;
-  margin-top: 7px;
+  justify-content: space-between;
+  margin: 25px 0;
 }
 
 .two-columns {
   display: flex;
-  gap: 0px;
-  flex-direction: row;
   justify-content: space-between;
-  width: 100%;
-  margin-bottom: 0px;
-  margin-top: 5px;
+  align-items: center;
+}
+.two-columns:last-of-type {
+  justify-content: space-evenly;
+  min-width: 320px;
+  padding-top: 28px;
 }
 
-.three-columns {
-  padding-left: 10px;
-  margin: 0px;
+.right-card {
+  margin-top: 25px;
+  flex-basis: 100%;
+  min-width: 200px;
+}
+
+.div-img-size {
+  width: 120px;
+  height: 120px;
+}
+
+.buttons-gap-small {
   gap: 5px;
   display: flex;
+  align-items: end;
 }
 
-.right {
-  padding-top: 25px;
+.buttons-showcase {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 20px;
+  min-width: 400px;
+}
+
+.buttons-gap-small:last-of-type {
+  margin-top: 15px;
+  gap: 24px;
+}
+
+.utils-showcase {
+  display: flex;
+  flex-flow: column wrap;
+  margin-top: 15px;
 }
 
 .one-line {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
   align-items: center;
-  height: auto;
-  margin-top: 20px;
-  margin-bottom: 0px;
+  min-width: 320px;
+  padding-bottom: 10px;
 }
 
-.input {
+.one-line > input {
   height: 38px;
   flex-grow: 1;
+  flex-basis: 180px;
 }
 
-.label {
-  flex-grow: 1;
+.one-line > span {
   height: 28px;
+  flex-grow: 1;
+}
+
+.wireframes {
+  display: flex;
+  justify-content: space-around;
+}
+
+.social-showcase {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 335px;
 }
 
 .icons {
   display: flex;
   justify-content: space-between;
   margin-top: 6px;
-  width: 100%;
-  flex-direction: row;
-  gap: 0px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-}
-
-.menu {
-  display: flex;
-  width: 100%;
-  margin-top: 0px;
-}
-
-.menu-item {
-  flex-grow: 1;
-  padding: 0em;
-}
-
-.grid-rb {
-  gap: 0px;
-}
-
-.div-img-size {
-  width: 120px;
-  height: 120px;
-  margin-top: 2px;
-}
-
-.grid-mb {
-  padding-top: 25px;
-}
-
-.prog-size {
-  margin-top: 24px;
-  margin-bottom: 0px;
-}
-
-.another-gap {
-  margin-right: 0px;
-  margin-left: 23px;
-  padding-top: 7px;
-}
-
-.top-margin {
-  margin-top: 14px;
-  padding-top: 4px;
+  margin-bottom: 15px;
 }
