--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   max-width: 1024px;
   height: 100vh;
   margin: auto;
@@ -14,7 +13,7 @@
 .flex-container {
   display: flex;
   justify-content: space-between;
-  gap: 25px;
+  gap: 20px;
   padding: 0 20px;
 }
 
@@ -42,7 +41,7 @@
 .labels {
   display: flex;
   justify-content: space-between;
-  margin: 25px 0;
+  padding: 30px 0;
 }
 
 .two-columns {
@@ -53,11 +52,10 @@
 .two-columns:last-of-type {
   justify-content: space-evenly;
   min-width: 320px;
-  padding-top: 28px;
+  padding-top: 24px;
 }
 
 .right-card {
-  margin-top: 25px;
   flex-basis: 100%;
   min-width: 200px;
 }
@@ -88,7 +86,7 @@
 .utils-showcase {
   display: flex;
   flex-flow: column wrap;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .one-line {
@@ -112,6 +110,7 @@
 .wireframes {
   display: flex;
   justify-content: space-around;
+  transform: translateY(-4px);
 }
 
 .social-showcase {
